fix(mp版本修改): mp版本修改，分页插件注入为bean